--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI-Powered Smart Voice Assistant</title>
+    <title>F.R.I.D.A.Y.</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <header>
             <h1>F.R.I.D.A.Y.</h1>
-            <p>Your browser-based intelligent assistant</p>
+            <p>Your browser-based AI-Powered Smart Voice Assistant</p>
         </header>
         
         <main>
