--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 </div>
                 
                 <div class="command-display">
-                    <p id="commandText">Say "Hey Assistant" to begin</p>
+                    <p id="commandText">Say "Friday" to begin</p>
                 </div>
                 
                 <div class="controls">
