--- a/index.html
+++ b/index.html
@@ -26,12 +26,15 @@
                 </div>
                 
                 <div class="command-display">
-                    <p id="commandText">Say "Friday" to begin</p>
+                    <p id="commandText">Say "Hey Friday" to begin</p>
                 </div>
                 
                 <div class="controls">
-                    <button id="toggleListening" class="btn-primary">
+                    <button id="toggleListening" class="btn-start">
                         Start Listening
+                    </button>
+                    <button id="toggleListening" class="btn-stop">
+                        Stop Listening
                     </button>
                     <button id="settingsBtn" class="btn-secondary">
                         Settings
