added a msg form submit option to chat

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
                 <div class="command-display">
                     <p id="commandText">Say "Hey Friday" to begin</p>
                 </div>
+
+                <form id="text-command-form">
+                    <input type="text" id="command-input" placeholder="Or type your command here..." autocomplete="off">
+                    <button type="submit">Send</button>
+                </form>
                 
                 <div class="controls">
                     <button id="toggleListening" class="btn-start">
