--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
         <div class="modal-content">
             <span class="close">&times;</span>
             <h2>Assistant Settings</h2>
-            <div class="settings-option">
+            <!-- <div class="settings-option">
                 <label for="wakeWord">Wake Word:</label>
                 <select id="wakeWord">
                     <option value="hey assistant">Hey Assistant</option>
                     <option value="computer">Computer</option>
                     <option value="jarvis">Jarvis</option>
                 </select>
-            </div>
+            </div> -->
             <div class="settings-option">
                 <label for="voice">Assistant Voice:</label>
                 <select id="voice">
