--- a/index.html
+++ b/index.html
@@ -103,6 +103,6 @@
         </div>
     </div>
     
-    <script src="script.js"></script>
+    <script type="module" src="main.js"></script>
 </body>
 </html>
